# vegify.app

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.jsonc  deny.toml  justfile  package.json  pnpm-lock.yaml  release-please-config.json  rust-toolchain.toml  seo-kit.toml  tsconfig.base.json  turbo.json
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  deploy-ci.yml  deploy.yml  ios-testflight.yml  release.yml
.scripts/: usda-process.mjs
apps/desktop/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: ensure-provisionprofile.mjs
apps/desktop/src/: App.tsx  bindings.ts  main.tsx  styles.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.mas.plist  Entitlements.plist  Info.plist  build.rs  schema.sql  tauri.conf.json  tauri.ios.conf.json  tauri.mas.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/examples/: gen_bindings.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: data.rs  lib.rs  main.rs
apps/web/: .cta.json  Dockerfile  docker-entrypoint.sh  package.json  prettier.config.js  serve-bun.mjs  tsconfig.json  vite.config.ts
apps/web-fast/: Cargo.toml
apps/web-fast/src/: main.rs
apps/web-leptos/: Cargo.toml  README.md
apps/web-leptos/src/: main.rs
apps/web-leptos/style/: app.css  out.css
apps/web-next/: .gitignore  README.md  next.config.ts  open-next.config.ts  package.json
apps/web-next/src/app/: app-shell.tsx  globals.css  layout.tsx  page.tsx
apps/web-next/src/app/recipes/: page.tsx
apps/web-start/: .cta.json  .gitignore  Dockerfile  package.json  serve-bun.mjs  vite.config.ts
apps/web-start/aws/: assemble-bundle.mjs  lambda-handler.mjs
apps/web-start/src/: link.tsx  routeTree.gen.ts  search.tsx  styles.css
apps/web-start/src/routes/: __root.tsx  index.tsx  ingredients.$ingredientId.edit.tsx  ingredients.$ingredientId.index.tsx  ingredients.$ingredientId.tsx  ingredients.index.tsx  recipes.$recipeId.edit.tsx  recipes.$recipeId.index.tsx  recipes.$recipeId.tsx  recipes.index.tsx
apps/web-tauri/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/web-tauri/src/: App.tsx  bindings.ts  main.tsx
apps/web-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/web-tauri/src-tauri/icons/: icon.icns
apps/web-tauri/src-tauri/src/: data.rs  lib.rs  main.rs
apps/web/aws/: assemble-bundle.mjs  ensure-schema.mjs  lambda-handler.mjs  sitemap.mjs
apps/web/public/: manifest.json  robots.txt  sitemap.xml
apps/web/public/.well-known/: apple-app-site-association
apps/web/src/: api-auth.ts  api.ts  auth-gate.test.ts  auth-gate.ts  auth.ts  brand-fonts.test.ts  client-log.ts  content.ts  ingredient-detail.tsx  legal.tsx  link.tsx  messages.ts  notifications.ts  recipe-compose.test.ts  recipe-detail.tsx  retry.ts  routeTree.gen.ts  router.tsx  search.tsx  styles.css  upload.ts
apps/web/src/routes/: $username.$recipeSlug.tsx  $username.index.tsx  $username.ingredients.$slug.tsx  $username.tsx  __root.tsx  api.auth.bootstrap.ts  api.auth.login.ts  api.auth.logout.ts  api.auth.signup.ts  api.content.ingredient-detail.ts  api.content.ingredient-edit.ts  api.content.ingredients.ts  api.content.pull.ts  api.content.recipe-detail.ts  api.content.recipe-edit.ts  api.content.recipes.ts  api.content.search.ts  blog.$slug.tsx  blog.index.tsx  diary.tsx  download.tsx  forgot.tsx  index.tsx  ingredients.$ingredientId.edit.tsx  ingredients.$ingredientId.index.tsx  ingredients.index.tsx  ingredients.new.tsx  login.tsx  messages.$username.tsx  messages.index.tsx  notifications.tsx  privacy.tsx  recipes.$recipeId.edit.tsx  recipes.$recipeId.index.tsx  recipes.index.tsx  recipes.new.tsx  reset.tsx  settings.tsx  signup.tsx  terms.tsx  (+1 more)
ci_scripts/: ci_post_clone.sh
crates/usda-importer/: Cargo.toml
crates/usda-importer/src/: main.rs
crates/vegify-admin/: Cargo.toml
crates/vegify-admin/src/: completefoods.rs  main.rs
crates/vegify-client-rs/: Cargo.toml
crates/vegify-client-rs/src/: generated.rs  lib.rs
crates/vegify-config/: Cargo.toml
crates/vegify-config/src/: lib.rs
crates/vegify-core/: Cargo.toml
crates/vegify-core/src/: lib.rs
crates/vegify-server/: Cargo.toml
crates/vegify-server/src/: auth.rs  blog_seed.json  content.rs  email.rs  error.rs  handles.rs  main.rs
crates/vegify-typegen/: Cargo.toml
crates/vegify-typegen/src/: main.rs
design/: inline-edit.md  personas.md  site-map.md
design/figma-import/: PREFLIGHT.md  text-overrides.md
design/personas/: jordan-pierce.md  priya-desai.md  simone-adler.md  wesley-hartley.md
design/tokens/: color.json
docs/: benchmark.md  deploys.md  desktop-autofill.md  ios.md  mac-app-store.md  self-host.md  usernames.md
docs/design/figma-import/: PREFLIGHT.md  inventory.txt  palette.json  text-overrides.json  text-overrides.md
docs/design/personas/: README.md  marcus-reed.md
infra/: .gitignore  README.md  cdk.json  package.json  tsconfig.json
infra/lambda/client-logs/: index.mjs
infra/lambda/origin-secret/: index.mjs
infra/lib/: ci-stack.ts  client-logs-stack.ts  db-stack.ts  dns-stack.ts  email-stack.ts  monitoring.ts  server-stack.ts  sync-stack.ts  vpc-stack.ts  web-next-stack.ts  web-start-fargate-stack.ts  web-start-stack.ts  zone.ts
scripts/: next-version.sh
seo-reports/: vegify.app-20260701T215801Z.json  vegify.app-20260701T215801Z.md  vegify.app-20260702T071224Z.json  vegify.app-20260702T071224Z.md
services/api/: Cargo.toml
services/api/examples/: usda_process.rs
services/api/server/: Cargo.toml
services/api/server/src/: auth.rs  blog.rs  content.rs  error.rs  handles.rs  main.rs  media.rs  messages.rs  notifications.rs  ratelimit.rs  safety.rs  usda.rs
services/api/src/: auth.rs  blog.rs  content.rs  email.rs  main.rs  messages.rs  notifications.rs  usda.rs
services/api/types/: Cargo.toml
services/api/types/src/: lib.rs
tools/figma-restore-overrides/: README.md  build.py  code.js  manifest.json  plugin.src.js
(+6 files in other folders)
