# Rust workspace. The shared DAL (`vegify-core`) is consumed by BOTH the desktop
# (apps/desktop/src-tauri) and the standing server (`services/api`, added in P1b) —
# the @vegify/db analogue for the Rust side. One Cargo.lock + one ./target for the whole tree.
# (This coexists with the pnpm/Turborepo JS workspace — different files, no overlap.)
[workspace]
resolver = "2"
members = [
  "crates/vegify-client-rs",
  "crates/vegify-typegen",
  "crates/usda-importer",
  "crates/vegify-admin",
  "crates/vegify-config",
  "crates/vegify-core",
  "services/api/server",
  "services/api/types",
  "apps/desktop/src-tauri",
]

# Patch glib 0.18.5 → a fork branch that backports the RUSTSEC-2024-0429 fix (unsoundness in
# glib::VariantStrIter's Iterator/DoubleEndedIterator impls; Dependabot alert #12). Tauri's Linux GTK
# stack pins glib 0.18, so the upstream fix (only in glib 0.20) can't be adopted without moving the
# whole gtk-rs generation; this 0.18.x branch resolves its sibling crates from crates.io, so patching
# `glib` alone is sufficient (no need to patch glib-macros/gio). glib is the LINUX webview backend —
# macOS uses WebKit, Windows uses WebView2 — so it only compiles on Linux desktop builds.
[patch.crates-io]
glib = { git = "https://github.com/johncarmack1984/gtk-rs-core", branch = "lux/glib-0.18-patch" }
