# Rust workspace. The shared DAL (`vegify-core`) is consumed by BOTH the desktop
# (apps/desktop/src-tauri) and the standing server (`services/api`, added in P1b) —
# the @vegify/db analogue for the Rust side. One Cargo.lock + one ./target for the whole tree.
# (This coexists with the pnpm/Turborepo JS workspace — different files, no overlap.)
[workspace]
resolver = "2"
members = [
  "crates/vegify-client-rs",
  "crates/vegify-typegen",
  "crates/usda-importer",
  "crates/vegify-admin",
  "crates/vegify-config",
  "crates/vegify-core",
  "services/api/server",
  "services/api/types",
  "apps/desktop/src-tauri",
]

# Patch glib 0.18.5 → a fork branch that backports the RUSTSEC-2024-0429 fix (unsoundness in
# glib::VariantStrIter's Iterator/DoubleEndedIterator impls; Dependabot alert #12). Tauri's Linux GTK
# stack pins glib 0.18, so the upstream fix (only in glib 0.20) can't be adopted without moving the
# whole gtk-rs generation; this 0.18.x branch resolves its sibling crates from crates.io, so patching
# `glib` alone is sufficient (no need to patch glib-macros/gio). glib is the LINUX webview backend —
# macOS uses WebKit, Windows uses WebView2 — so it only compiles on Linux desktop builds.
[patch.crates-io]
glib = { git = "https://github.com/johncarmack1984/gtk-rs-core", branch = "lux/glib-0.18-patch" }

# specta 2.0.0-rc.26 + the 0.0.13 exporters are merged upstream but UNPUBLISHED (crates.io still
# serves rc.25/0.0.12; the rc.26 release commit exists on main without a publish). The workspace
# pins the rc.26 versions and resolves them from this upstream rev — which carries the OpenAPI
# paths layer (specta-rs/specta#547/#548) and the specta-rust exporter that vegify-typegen
# consumes. tauri-typed-ipc rides a branch bumped to the same pins (its crates.io release
# exact-pins rc.25, which would split the graph into two spectas). When rc.26 publishes: drop
# these five entries, swap typegen's git deps to versions, and move ttipc to its next release.
specta = { git = "https://github.com/specta-rs/specta", rev = "ef21f0544e153b944ff5d1b3afd20472afcf760c" }
specta-serde = { git = "https://github.com/specta-rs/specta", rev = "ef21f0544e153b944ff5d1b3afd20472afcf760c" }
specta-typescript = { git = "https://github.com/specta-rs/specta", rev = "ef21f0544e153b944ff5d1b3afd20472afcf760c" }
specta-util = { git = "https://github.com/specta-rs/specta", rev = "ef21f0544e153b944ff5d1b3afd20472afcf760c" }
tauri-typed-ipc = { git = "https://github.com/johncarmack1984/tauri-typed-ipc", rev = "99f7fcfb2366aa4a1969d4e0938f26380f67ed32" }

# Workspace lint floor: no hand-written unsafe (deny, not forbid: FFI-adjacent
# derive macros scope their own allows, which forbid would reject), and the
# full clippy `all` group surfaces as warnings. Members opt in via
# [lints] workspace = true.
[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
panic = "warn"
todo = "warn"
