[package]
name = "web-leptos"
version = "0.0.0"
edition = "2021"
description = "Leptos spike: React-like component DX in Rust, SSR, same recursive-CTE nutrition."

[[bin]]
name = "web-leptos"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", features = ["ssr"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
