[package]
name = "usda-importer"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Builds the embedded USDA plant-catalog artifact (services/api/data/usda-plants.json.gz) from raw FoodData Central downloads. A dev-time tool — never part of a shipped build; the server embeds only its output."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
