[package]
name = "vegify-admin"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Operator tooling that works through the LIVE content API (never the DB directly - the API is the only write path). v1: purge-content, the seed/test-content cleanup. Dev-time tool; never part of a shipped build."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
