[package]
name = "vegify-server"
version = "0.0.0" # vestigial - the version is git-tag-derived (see .github/workflows/deploy.yml)
edition = "2021"
description = "Vegify standing backend — Axum over SQLite-WAL, serving the SAME /api/auth + /api/content contract the clients already speak. Owns the single source-of-truth DB; consumes vegify-core."

[dependencies]
# The shared DAL — the same content model + viewer-scoped reads the desktop uses.
vegify-core = { path = "../../crates/vegify-core" }
# Central env-sourced settings (db path, port, signups gate, SES region, email link base/From).
vegify-config = { path = "../../crates/vegify-config", features = ["server"] }
axum = { version = "0.8", features = ["ws"] }
# `sync` = the broadcast channel that fans content-change signals to /ws clients; `time` = the keepalive ping interval.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
# Must match vegify-core's rusqlite (0.32) so the Connection type unifies; `bundled` compiles SQLite in.
rusqlite = { version = "0.32", features = ["bundled"] }
# WAL connection pool: concurrent readers + a serialized writer (rusqlite is sync → spawn_blocking).
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Auth port: argon2id (PHC strings cross-compatible with hash-wasm) + sha256-hashed opaque tokens.
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
# Structured observability: tower-http TraceLayer emits a per-request span (method/path/status/latency),
# formatted + RUST_LOG-filtered by tracing-subscriber; handler info!/error! surface writes + auth outcomes.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
# Transactional email (password reset, A5) via SES v2. Creds come from the default chain — the EC2
# instance role in prod, env/SSO locally — and the client is built lazily on first send, so the server
# still boots with no email config and pays nothing until a reset is actually requested.
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1"

[[bin]]
name = "vegify-server"
path = "src/main.rs"
