[package]
name = "vegify"
version = "0.0.0" # vestigial - the version is git-tag-derived (see .github/workflows/deploy.yml)
description = "Vegify desktop (local-first)"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vegify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# gen_bindings (the src/bindings.ts codegen helper) lives in examples/, NOT src/bin/: `cargo build`
# (what `tauri build` runs) never compiles examples, so Tauri's macOS bundler never tries to copy it
# into the .app — a src/bin/ binary would be auto-discovered, built, and then fail the universal
# bundle (only the lipo'd `vegify` binary lands in target/universal-apple-darwin/). Run it explicitly:
# `pnpm --filter desktop gen:bindings` → `cargo run --example gen_bindings`.

[dev-dependencies]
# gen_bindings' SECOND output: packages/api-types (the web's generated wire types). Example-only —
# nothing shipped compiles these. Pinned to ttipc's own internals so the emission is identical.
specta-typescript = "=0.0.12"
specta-serde = "=0.0.12"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# The shared DAL (content types, mutations, nutrition CTE, visibility, viewer-scoped reads) — the
# SAME crate the standing server consumes, so the two can never drift. No Tauri/HTTP in it.
vegify-core = { path = "../../../crates/vegify-core" }
# Central env-sourced settings (backend URL incl. the build-time VEGIFY_API_URL bake, on-device DB path).
vegify-config = { path = "../../../crates/vegify-config", features = ["desktop"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tracing = "0.1"
# `bundled` compiles SQLite in. (The sqlite3session changeset feature was dropped with the S3 sync
# mesh — the desktop is now an offline-first cache of the server, synced over the content API.)
rusqlite = { version = "0.32", features = ["bundled"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
ttipc = { package = "tauri-typed-ipc", version = "0.1.2", features = ["export"] }
# Desktop sign-in + content-API sync: a blocking HTTP client (matches the sync DAL) to the web shell's
# JSON auth + content routes, and the OS keychain for the session token.
ureq = { version = "2", features = ["json", "gzip"] }
keyring = { version = "3", features = ["apple-native"] }
# OS deep links: vegify:// custom scheme (CFBundleURLTypes injected at bundle time from
# tauri.conf.json) + vegify.app universal links (applinks entitlement + AASA). Delivers opened URLs
# to the frontend (onOpenUrl/getCurrent). Runtime needs a built .app bundle — inert under `tauri dev`.
tauri-plugin-deep-link = "2.4"
# Native OS toasts for bell events (new DM while the window is unfocused) — see lib.rs + App.tsx.
tauri-plugin-notification = "2"
# Realtime push (replaces the 60s poll): a background task connects to the server's /ws and emits a Tauri
# event on each content change so the frontend pulls immediately. Separate from the sync ureq path above —
# tokio-tungstenite over rustls (webpki roots, no system OpenSSL) on its own current-thread runtime.
tokio = { version = "1", features = ["rt", "net", "time", "io-util"] }
tokio-tungstenite = { version = "0.29", features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Structured logging via tracing — the fltsci plugin installs the subscriber so the sync runtime's
# info!/debug! surface, and bridges the JS console (@fltsci/tauri-plugin-tracing attachConsole).
# Replaces tauri-plugin-log. DESKTOP-ONLY: 0.3.4 (latest) ships an iOS code path that calls
# swift_rs::swift! without declaring the swift-rs dep, so the crate cannot compile for iOS/Android.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-tracing = "0.3"

# Mobile stand-in for the tracing plugin (see above): a plain fmt subscriber so info!/debug! reach
# the simulator/device console until upstream compiles for iOS.
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
tracing-subscriber = "0.3"
