[package]
publish = false
name = "vegify-api-types"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "The vegify HTTP API's wire contract as data: every serde shape the server speaks + the assembled specta TypeCollection. Logic-free; the Rust twin of the generated @vegify/api-types TS package."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pinned to the workspace's ttipc-matching line; "serde_json" covers the payload/body Value fields.
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"] }
# Registered into the same TypeCollection (the shared DAL shapes the web consumes).
vegify-core = { path = "../../../crates/vegify-core" }

[lints]
workspace = true
