[package]
publish = false
name = "vegify-api-types"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "The vegify HTTP API's wire contract as data: every serde shape the server speaks + the assembled specta TypeCollection. Logic-free; the Rust twin of the generated @vegify/api-types TS package."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pinned to the workspace's ttipc-matching line; "serde_json" covers the payload/body Value fields.
specta = { version = "=2.0.0-rc.26", features = ["derive", "serde_json"] }
# Registered into the same TypeCollection (the shared DAL shapes the web consumes).
vegify-core = { path = "../../../crates/vegify-core" }
# Behind the `openapi` feature: the endpoint descriptions (paths object) for openapi.json.
# Unpublished exporter — same rev the root [patch.crates-io] pins specta to. The server never
# enables this feature; only vegify-typegen does, so the exporter stays out of the shipped binary.
specta-openapi = { git = "https://github.com/specta-rs/specta", rev = "ef21f0544e153b944ff5d1b3afd20472afcf760c", optional = true }

[features]
# The route table (api_operations) for openapi.json generation — typegen-only.
openapi = ["dep:specta-openapi"]

[lints]
workspace = true
